# AIWriteX-main

./: .gitignore  README.md  RELEASES.md  db_structure.md  fix_generate.py  fix_generate_v2.py  knowledge_graph.json  main.py  project_specs.md  pyproject.toml  pytest.ini  requirements.txt  setup.bat  test_image_fixes.py  test_keyerror_fix.py  todos.txt  topic_memory.json.bak  z-image专用nf4快速备份.json  一键安装依赖和创建虚拟环境（每次新版本都要执行）.bat  一键更新.bat  启动.bat  安装Rust支持.bat
comfyUI修复彩色输出和进度条/: start_comfyui_fixed.bat
config/: aesthetic_profile.json  color_system.json  design_elements.json
data/: aiwritex_v6.db-shm  aiwritex_v6.db-wal  topics_history.json
docs/: AIWriteX iFlow CLI - Skill 与工作流完整指南.md  AIWriteX_Complete_Doc.md  project_specs.md
knowledge/: newshub_cache.json
previews/: preview_预览测试文章_1772952212.html
secrets/: README.md  api_keys.example.yaml
src/ai_write_x/scrapers/: .env.example  .gitignore  8world.py  README.md  aipapers.py  base.py  bbc.py  classify.py  database.py  demo_logger.py  douyin.py  google_news.py  hellogithub.py  hotrank_api.py  international_media.py  ithome.py  logger_utils.py  main.py  multimedia_hot.py  newsapi_org.py  nytimes.py  pengpai.py  pyproject.toml  rss_aggregator.py  souhu.py  tengxuntiyu.py  tengxunxinwen.py  test_spiders.py  traffic_analyzer.py  trend_predictor.py  universal_scraper_engine.py  voa.py  wangyi.py  wangyi_domestic.py  wangyi_fujian.py  wangyi_money.py  wangyi_tech.py  wangyi_war.py  wangyi_world.py  weibo.py  (+5 more)
tests/: __init__.py  benchmark_v20.py  comprehensive_test.py  conftest.py  run_all_tests.py  run_tests.py  (+47 more)
(+501 files in other folders)
